Fixed the alignment of profile comp

--- a/inclusio/src/App.scss
+++ b/inclusio/src/App.scss
@@ -19,6 +19,7 @@ p{
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     line-height: 6px;
+    width: 150px;
 }
 
 h3{
